# skeletons

./: README.md
c++/: CMakeLists.txt  autotest
c++/include/: hello.h
c++/spec/: hello_spec.cpp
c++/src/: hello.cpp
clj/: Makefile  deps.edn  tests.edn
clj/src/skeleton/: hello.clj
clj/test/skeleton/: hello_test.clj
python/: Makefile  Pipfile
python/app/test/lib/: test_hello.py
